# GPE-Brouillon

local/: .clang_complete  .ycm_extra_conf.py  CMakeLists.txt
local/cmake/: FindPoco.cmake
local/include/SPC/Database/: Client.hpp  Database.hpp  Login.hpp
local/include/SPC/Http/: Server.h
local/lib/: CMakeLists.txt
local/lib/Database/: CMakeLists.txt  Client.cpp  Database.cpp  Login.cpp
local/lib/Http/: CMakeLists.txt  Server.cpp
local/src/: CMakeLists.txt  Client.hpp  Server.hpp  main.cpp
local/test/: CMakeLists.txt  test_add.cpp
